test_cases/fail/21_random_param.c0
int main(int a, int b, int c, int d, int e, int f, int g, struct foo *h, int i) {
    return a + b + c + d;
}